// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainModal propsで受け取るerrorの有無での表示検証  1`] = `
<DocumentFragment>
  <div
    class="t-modal-height bg-white w-full flex justify-center items-center"
    style="opacity: 0;"
  >
    <div>
      <p>
        データ取得に失敗しました 一度更新してください
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MainModal propsで受け取るerrorの有無での表示検証  2`] = `
<DocumentFragment>
  <div
    class="t-modal-height bg-white w-full flex justify-center items-center"
    style="opacity: 0;"
  >
    <div
      class="border border-gray-400 px-5 py-7 min-w-[200px]"
    >
      <ul>
        <li
          class="text-center pb-2 last-of-type:pb-0"
        >
          <a
            class="text-gray-500 cursor-pointer"
          >
            Jordan
          </a>
        </li>
        <li
          class="text-center pb-2 last-of-type:pb-0"
        >
          <a
            class="text-green-600"
          >
            Egypt
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
